Fixed z-index extended navbar menu.

--- a/src/styles/components/navbar.module.scss
+++ b/src/styles/components/navbar.module.scss
@@ -3,6 +3,7 @@
 .navbar {
     position: fixed;
     top: 0;
+    z-index: 10;
     height: 100px;
     width: 100%;
     padding: 0 20px;;
